--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@tensorflow/tfjs": "^4.18.0",
+    "face-api.js": "^0.22.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
