--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@tensorflow/tfjs": "^4.18.0",
+    "emailjs-com": "^3.2.0",
     "face-api.js": "^0.22.2",
+    "firebase": "^10.11.1",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
     "rxjs": "~7.8.0",
+    "safe-pipe": "^3.0.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.14.3"
